test/files/neg/bug711.check
bug711.scala:11 error: method sayHey overrides nothing
    def sayHey: Unit
    ^
one error found
